# auth-microservice

./: .dockerignore  Cargo.toml  Dockerfile-auth  Dockerfile-health  docker-compose.yaml
src/auth-service/: auth.rs  main.rs  sessions.rs  users.rs
src/client/: main.rs
src/health-check-service/: main.rs
